--- a/src/pages/pivotus-design-system/index.mdx
+++ b/src/pages/pivotus-design-system/index.mdx
@@ -10,3 +10,7 @@ import header from './assets/header.jpg'
 **TLDR:** My first project at Pivotus was working across design and engineering to create our design system. This involved creating a component library as Sketch libraries — managed by Abstract, front-end architecture work for the accompanying system in code, creating universal components with React/React Native, creating tooling for developers with customers in mind, ensuring accessibility, and creating lots of documentation.
 
 ---
+
+<br />
+
+Full case study coming soon.
