--- a/src/pages/engage-dashboard/index.mdx
+++ b/src/pages/engage-dashboard/index.mdx
@@ -84,7 +84,7 @@ Seeing how agents used the product in both branches and the HQ was really eye op
 <br />
 
 We decided to focus on three main improvment areas
-- **Condensed Conversations** — 
+- **Condensed conversations** — 
 We removed the conversation preview, condensed the cells, and reduced the sizing on elements were unnecessarily large like the avatar. This allowed agents to have a better overview of their recent/active conversations.
 
 - **Searching conversations** —
