jpg to png dash header

--- a/src/pages/engage-dashboard/index.mdx
+++ b/src/pages/engage-dashboard/index.mdx
@@ -1,4 +1,4 @@
-import header from './assets/header.jpg'
+import header from './assets/header.png'
 import massmess from './assets/massmess.png'
 import redactmess from './assets/redactmess.png'
 import recalledmess from './assets/recalledmess.png'
