--- a/src/pages/engage-agent-selection/index.mdx
+++ b/src/pages/engage-agent-selection/index.mdx
@@ -19,7 +19,7 @@ import explorePlan from './assets/explore-plan.png'
 To get a better idea of why someone might choose an agent we sent out a survey to the users of our pilot app.
 
 
-**Onboarding survey question:** What was the single most important factor when choosing a BFF?
+**Pilot interview question:** What was the single most important factor when choosing a BFF?
 
 Primary reasons:
 - Recommendation from other people
