update engcust tldr

--- a/src/pages/engage-customer/index.mdx
+++ b/src/pages/engage-customer/index.mdx
@@ -7,7 +7,7 @@ import header from './assets/header.jpg'
 
 ---
 
-**TLDR:** Throughout my time at Pivotus I've worked on our customer app. In mid 2018 I was able to redefine our white label theme. This included visual design, copywriting, and refining our systematic approach for designing a SAAS application.
+**TLDR:** Throughout my time at Pivotus I've worked on our customer app. In mid 2018 I was able to redefine our white label theme. This included visual design, copywriting, and refining our systematic approach for designing a SAAS application. I also spent time owning the redesign of features and worked closely with PMs/engineers to creatively get features delivered.
 
 ---
 
