--- a/src/pages/engage-agent-selection/index.mdx
+++ b/src/pages/engage-agent-selection/index.mdx
@@ -39,7 +39,7 @@ Allow customers to find an agent that better suits their needs or desired type o
 
 ## Understanding
 
-To get a better idea of why someone might choose an agent we sent out a survey to the users of our pilot app.
+To get a better idea of why someone might choose an agent we interviewed a subset of customers on the pilot app.
 
 
 **Pilot interview question:** What was the single most important factor when choosing a BFF?
