--- a/src/pages/engage-agent-selection/index.mdx
+++ b/src/pages/engage-agent-selection/index.mdx
@@ -50,6 +50,8 @@ Primary reasons:
 - Existing relationship with agent
 - Similar interests
 
+After gathering this data I decided to plan some Design Sprint sessions to find the commonalities between customer needs and needs of our customer financial institutions. They had different desires and needs based on their different business models so our solution needed to be flexible.
+
 ### Design Sprint activities
 
 I’ve found certain Design Sprint activities extremely useful, but often time or the scope of the problem lead to a more selective collection in place of the full week. The most effective use of these activities depends on what you’re trying to solve.
