--- a/src/pages/engage-agent-selection/index.mdx
+++ b/src/pages/engage-agent-selection/index.mdx
@@ -31,18 +31,19 @@ Main focus was new customers who were going through agent selection for the firs
 
 ### Goals
 
-- **Reduce onboarding dropoff** —
+- **Reduce onboarding dropoff**
 Customers were dropping off when they hit agent selection. Maybe more context would help?
 
 - **Connect customers with the right agent** — 
 Allow customers to find an agent that better suits their needs or desired type of relationship.
 
+**Questioning our premise:** Does the “right choice” exist? Does it matter? Some people care, but there are those that don’t.
+
 ## Understanding
 
 To get a better idea of why someone might choose an agent we interviewed a subset of customers on the pilot app.
 
-
-**Pilot interview question:** What was the single most important factor when choosing a BFF?
+**Pilot interview question:** What was the single most important factor when choosing an agent?
 
 <div className={'callout-card'}>
 
@@ -54,13 +55,17 @@ To get a better idea of why someone might choose an agent we interviewed a subse
 
 </div>
 
+In addition to this, we also found that there were some who weren't concerned about their relationship with their agent. These customers tended to be more transaction focused, where that relationship isn't as beneficial, or newer customer who haven't yet developed relationships and context yet.
+
+> Not everyone needs or cares about the depth of an ongoing 1:1 relationship, but they could still get value from the product. Let’s not forget them.
+
 After gathering this data I decided to plan some Design Sprint sessions to find the commonalities between customer needs and needs of our customer financial institutions. They had different desires and needs based on their different business models so our solution needed to be flexible.
 
 ### Design Sprint activities
 
 I’ve found certain Design Sprint activities extremely useful, but often time or the scope of the problem lead to a more selective collection in place of the full week. The most effective use of these activities depends on what you’re trying to solve.
 
-I’ve found these sessions to have the most forward momentum when we leave with something visualized — regardless of the level of fidelity. Because of this I focused mainly on a How Might We session and Crazy 8s.
+These sessions tend to have the most forward momentum when we leave with something visualized — regardless of the level of fidelity. Because of this I focused mainly on a How Might We session and Crazy 8s.
 
 One of the main problems to consider was the differing needs/wants of our customer banks in relation to what user research told us end customers needed. I started by grouping the needs of financial institutions and customers to find commonalities.
 
@@ -72,9 +77,9 @@ After that we began a How Might We session to get ideas on the board and get eve
 
 <div className={'callout-card'}>
 
-- Location
-- Expertise
-- Agent name
+- **Location** — find an agent nearby or in a specific location 
+- **Expertise** — get help in a specific financial area
+- **Agent name** — find someone you know or a recommendation
 
 </div>
 
@@ -117,12 +122,12 @@ I was also designing the second prototype in parallel. This prototype was focuse
 The initial flow was comprised of a few main parts:
 
 - **Educational modal** — explaining what agent selection means
-  - This choice isn’t forever, but this person is with you for as long as you want
-  - It added context that we wrongly assumed was there for first time users
+  - This choice isn’t forever — your agent is with you as long as you want
+  - Added context that we wrongly assumed was there for first time users
 - **Agent selection home screen**
-  - A powerful search bar for names, locations, and expertise
+  - A powerful search section for names, locations, and expertise
   - A list of currently available agents
-    - These are for the people who just need help and are less concerned with where it comes from
+    - For the people who just need help and are less concerned with where it comes from
   - A list of cards that link to expertise pages
   - A Near You section for finding an local agent
 - **Expertise pages** — explaining the type of expertise and returning a searchable list of agents with that tag
