update gifwrapper bg

--- a/src/pages/engage-agent-selection/index.mdx
+++ b/src/pages/engage-agent-selection/index.mdx
@@ -152,7 +152,7 @@ When bringing these designs to a higher fidelity I also made more considerations
 
 I also introduced subtle animations in places like the search button to convey that not all information had to be entered to search by drawing more attention to it after the first input.
 
-<div className={'gifWrapper'} style={{ display: 'flex', justifyContent: 'center', alignItems: 'center', backgroundImage: 'linear-gradient(180deg, #FFFFFF 0%, #FCFDFF 40%, #F2F4F7 100%)' }}>
+<div className={'gifWrapper'} style={{ display: 'flex', justifyContent: 'center', alignItems: 'center', backgroundImage: 'linear-gradient(180deg, #FFFFFF 0%, #FCFDFF 40%, #fafbfe 100%)' }}>
 
 ![](https://d2mxuefqeaa7sj.cloudfront.net/s_CF5478BDBE35B8BD39AE131780CC0BFF08DB439306B2B918D99DC67596F98047_1536622645584_explore_header.gif)
 
