--- a/src/pages/engage-agent-selection/index.mdx
+++ b/src/pages/engage-agent-selection/index.mdx
@@ -16,7 +16,7 @@ import explorePlan from './assets/explore-plan.png'
 
 ## Crafting the right connection
 
-The heart of Engage is the ongoing relationship between customer and their agent at their financial institution. Connecting with the right agent greatly influences what a customer is able to get out of the app. Many of these relationships are extensions from the branch, but we also connected and created new relationships.
+The heart of Engage is the ongoing relationship between customer and their agent at their financial institution. Connecting with the right agent greatly influences what a customer is able to get out of the app. Many of these relationships are extensions from the branch, but we also connect and create new relationships.
 
 The previous solution dropped customers right into a choice without enough context and didn't give them flexible ways to find what was best for them in an simple, informed way.
 
