--- a/src/pages/engage-agent-selection/index.mdx
+++ b/src/pages/engage-agent-selection/index.mdx
@@ -178,7 +178,7 @@ I also spent time working on some prototype animations for our future vision of 
 ![](https://d2mxuefqeaa7sj.cloudfront.net/s_CF5478BDBE35B8BD39AE131780CC0BFF08DB439306B2B918D99DC67596F98047_1529448207157_2018-03-14+09_27_15.gif)
 
 
-While it's not something we can implement immediately, having a north star allowed us to lay groundwork and prioritize our sprints appropriately.
+While we weren't able to implement it immediately, having a north star allowed us to lay groundwork and prioritize our sprints appropriately.
 
 ## Conclusion
 
